Updated Pokemon page

--- a/sub-sites/poke-teams.html
+++ b/sub-sites/poke-teams.html
@@ -49,7 +49,7 @@
 				<img src="http://www.smogon.com/dex/media/sprites/xy/medicham-mega.gif">
 				<br>
 				<span class="white-text gray-button"> Medicham
-				<img width="15px" src="https://pokemythology.net/conteudo/imgs/info/equip_keystone.png">
+				<img width="15px" src="../pictures/mega_keystone.png">
 				</span>
 			</div>
 		</div>
@@ -93,7 +93,7 @@
 				<img src="http://www.smogon.com/dex/media/sprites/xy/garchomp-mega.gif">
 				<br>
 				<span class="draco-text gray-button"> Garchomp
-				<img width="15px" src="https://pokemythology.net/conteudo/imgs/info/equip_keystone.png">
+				<img width="15px" src="../pictures/mega_keystone.png">
 				</span>
 			</div>
 		</div>
@@ -101,9 +101,15 @@
 		<div class="white-outline centering third-width">
 			<h2 class="white-text"> Current Team - Pok&eacute;mon Let's Go Eevee! </h2>
 			<div>
-				<img src="https://play.pokemonshowdown.com/sprites/xyani/pikachu-f.gif">
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/raichu.gif">
 				<br>
-				<span class="yellow-text gray-button"> Pikachu </span>
+				<span class="yellow-text gray-button">Raichu<br>"Ryan"</span>
+			</div>
+			<br>
+			<div>
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/raichu-alola.gif">
+				<br>
+				<span class="yellow-text gray-button"> Raichu </span>
 			</div>
 			<br>
 			<div>
@@ -113,9 +119,15 @@
 			</div>
 			<br>
 			<div>
-				<img src="https://play.pokemonshowdown.com/sprites/xyani/charmeleon.gif">
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/lapras.gif">
 				<br>
-				<span class="red-orange-text gray-button"> Charmeleon </span>
+				<span class="light-blue-text gray-button"> Lapras </span>
+			</div>
+			<br>
+			<div>
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/charizard.gif">
+				<br>
+				<span class="pale-orange-text gray-button"> Charizard </span>
 			</div>
 			<br>
 			<div>
@@ -166,7 +178,7 @@
 				<img src="https://play.pokemonshowdown.com/sprites/xyani/banette-mega.gif">
 				<br>
 				<span class="purple-text gray-button"> Banette 
-				<img width="15px" src="https://pokemythology.net/conteudo/imgs/info/equip_keystone.png"> </span>
+				<img width="15px" src="../pictures/mega_keystone.png"> </span>
 			</div>
 		</div>
 		<div class="white-outline centering third-width">
@@ -254,7 +266,7 @@
 				<img src="http://www.smogon.com/dex/media/sprites/xy/swampert-mega.gif">
 				<br>
 				<span class="light-blue-text gray-button"> Swampert
-				<img width="15px" src="https://pokemythology.net/conteudo/imgs/info/equip_keystone.png">
+				<img width="15px" src="../pictures/mega_keystone.png">
 				</span>
 			</div>
 			<br>
@@ -301,7 +313,7 @@
 				<img src="http://www.smogon.com/dex/media/sprites/xy/blastoise-mega.gif">
 				<br>
 				<span class="light-blue-text gray-button"> Blastoise
-				<img width="15px" src="https://pokemythology.net/conteudo/imgs/info/equip_keystone.png">
+				<img width="15px" src="../pictures/mega_keystone.png">
 				</span>
 			</div>
 			<br>
@@ -311,7 +323,7 @@
 				<img src="http://www.smogon.com/dex/media/sprites/xy/banette-mega.gif">
 				<br>
 				<span class="purple-text gray-button"> Banette
-				<img width="15px" src="https://pokemythology.net/conteudo/imgs/info/equip_keystone.png">
+				<img width="15px" src="../pictures/mega_keystone.png">
 				</span>
 			</div>
 		</div>	
