--- a/sub-sites/pokemon.html
+++ b/sub-sites/pokemon.html
@@ -8,8 +8,8 @@
 	<!-- meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no" -->
 </head>
 <body>
-	<div class="top-strip centering">
-		<a href="../index.html" class="back-button"> Back </a>
+	<div class="top-strip">
+		<a href="../index.html" class="gray-button"> Back </a>
 	</div>		
 	<div class="centering">
 		<img class="heading" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/International_Pok%C3%A9mon_logo.svg/2000px-International_Pok%C3%A9mon_logo.svg.png" alt="Pokemon Logo">
@@ -26,12 +26,13 @@
 				
 			<h2> Recent News </h2>
 			<div>
-				<h3> Pok&eacute;mon Let's Go Pikachu! and Pok&eacute;mon Let's Go Eevee! now in stores! </h3>
-				<img width = "600px" src="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fblogs-images.forbes.com%2Fdavidthier%2Ffiles%2F2018%2F05%2FDeaLp6fVMAEzguS.jpg" alt="Let's Go">
-				<h3> New Pok&eacute;mon: Meltan and Melmetal </h3>
-				<p class="white-text"> Obtainable in the games above by connecting to Pok&eacute;mon GO.  </p>
-				<img height="200px" src="https://img.pokemondb.net/artwork/meltan.jpg" alt="Meltan">
-				<img height="200px" src="https://img.pokemondb.net/artwork/melmetal.jpg" alt="Melmetal">
+				<h3> Pok&eacute;mon Generation 8 coming late 2019! </h3>
+				<img width = "600px" src="../pictures/pokemon_swsh_logo.jpg" alt="Sword and Shield">
+				<h3> Travel to the Galar Region (based on Great Britain) </h3>
+				<img width = "600px" src="../pictures/galar_region.jpg" alt="Galar Region">
+				<h3> New Pok&eacute;mon: Galar Region starters  </h3>
+				<img width = "600px" src="../pictures/galar_starters.png" alt="Galar Starters">
+	
 			</div>
 				
 			<a name="gen-compare">	
@@ -206,7 +207,7 @@
 				<img src="http://www.smogon.com/dex/media/sprites/xy/medicham-mega.gif">
 				<br>
 				<span class="white-text gray-button"> Medicham
-				<img width="15px" src="https://pokemythology.net/conteudo/imgs/info/equip_keystone.png">
+				<img width="15px" src="../pictures/mega_keystone.png">
 				</span>
 			</div>
 		</div>	
