Updated Pokemon Teams page

--- a/sub-sites/poke-teams.html
+++ b/sub-sites/poke-teams.html
@@ -361,9 +361,9 @@
 			</div>
 			<br>
 			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/druddigon.gif">
+				<img src="http://www.smogon.com/dex/media/sprites/xy/zekrom.gif">
 				<br>
-				<span class="light-blue-text gray-button"> Druddigon </span>
+				<span class="almost-black-text gray-button"> Zekrom </span>
 			</div>
 		</div>
 		<div class="white-outline centering third-width">
