Removed purple glow from front page due to Edge having problems formatting it

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 		<a href="sub-sites/running.html" class="gray-button gray-button-top">Running</a> 
 	</div>
 	
-	<div class="centering purple-glow">
+	<div class="centering">
 		<div class="purple-glow">
 			<img class="sombra-skull purple-glow" src='pictures/sombra-skull.png' alt='sombra' />
 		</div>
 		<hr class="index">
 		
 		
-		<div class="purple-glow">
+		<div class="">
 			<h1 class=""> Brandon C. Ruoff </h1>
 		</div>
 		<div> 
