--- a/sub-sites/pokemon.html
+++ b/sub-sites/pokemon.html
@@ -25,14 +25,29 @@
 				<a href="https://www.smogon.com/" class="gray-button"> https://www.smogon.com/ </a>
 				
 			<h2> Recent News </h2>
+			<h3> Pok&eacute;mon Sword and Shield - November 17th 2019 </h3>
+			
 			<div>
-				<h3> Pok&eacute;mon Generation 8 coming late 2019! </h3>
-				<img width = "600px" src="../pictures/pokemon_swsh_logo.jpg" alt="Sword and Shield">
+				<img width = "800px" src="../pictures/sword_shield_covers.png" alt="swsh covers">
+			</div>
+			
+			<h3> New Pok&eacute;mon! </h3>
+			<div>
+				<img width = "350px" src="../pictures/zacian.png" alt="zacian">
+				<img width = "350px" src="../pictures/zamazenta.png" alt="zamazenta">
+			</div>
+			<div>
+				<img width = "350px" src="../pictures/wooloo.png" alt="wooloo">
+				<img width = "350px" src="../pictures/drednaw.png" alt="drednaw">
+				<img width = "350px" src="../pictures/gossifleur.png" alt="gossifleur">
+				<img width = "350px" src="../pictures/eldegoss.png" alt="eldegoss">
+				<img width = "350px" src="../pictures/corviknight.png" alt="corviknight">		
+			</div>
+			<div>
 				<h3> Travel to the Galar Region (based on Great Britain) </h3>
 				<img width = "600px" src="../pictures/galar_region.jpg" alt="Galar Region">
-				<h3> New Pok&eacute;mon: Galar Region starters  </h3>
+				<h3> Galar Region starters  </h3>
 				<img width = "600px" src="../pictures/galar_starters.png" alt="Galar Starters">
-	
 			</div>
 				
 			<a name="gen-compare">	
