Fixed picture size problem on Pokemon page

--- a/sub-sites/pokemon.html
+++ b/sub-sites/pokemon.html
@@ -28,23 +28,23 @@
 			<h3> Pok&eacute;mon Sword and Shield - November 17th 2019 </h3>
 			
 			<div>
-				<img width = "800px" src="../pictures/sword_shield_covers.png" alt="swsh covers">
+				<img width = "60%" src="../pictures/sword_shield_covers.png" alt="swsh covers">
 			</div>
 			
 			<h3> New Pok&eacute;mon! </h3>
 			<div>
-				<img width = "350px" src="../pictures/zacian.png" alt="zacian">
-				<img width = "350px" src="../pictures/zamazenta.png" alt="zamazenta">
+				<a href="https:pokemondb.net/pokedex/zacian"> <img width = "45%" src="../pictures/zacian.png" alt="zacian"> </a>
+				<a href="https:pokemondb.net/pokedex/zamazenta"> <img width = "45%" src="../pictures/zamazenta.png" alt="zamazenta"> </a>
 			</div>
 			<div>
-				<img width = "350px" src="../pictures/wooloo.png" alt="wooloo">
-				<img width = "350px" src="../pictures/drednaw.png" alt="drednaw">
-				<img width = "350px" src="../pictures/gossifleur.png" alt="gossifleur">
-				<img width = "350px" src="../pictures/eldegoss.png" alt="eldegoss">
-				<img width = "350px" src="../pictures/corviknight.png" alt="corviknight">		
+				<a href="https:pokemondb.net/pokedex/wooloo"> <img width = "45%" src="../pictures/wooloo.png" alt="wooloo"> </a>
+				<a href="https:pokemondb.net/pokedex/drednaw"> <img width = "45%" src="../pictures/drednaw.png" alt="drednaw"> </a>
+				<a href="https:pokemondb.net/pokedex/gossifleur"> <img width = "45%" src="../pictures/gossifleur.png" alt="gossifleur"> </a>
+				<a href="https:pokemondb.net/pokedex/eldegoss"> <img width = "45%" src="../pictures/eldegoss.png" alt="eldegoss"> </a>
+				<a href="https:pokemondb.net/pokedex/corviknight"> <img width = "45%" src="../pictures/corviknight.png" alt="corviknight">	</a>	
 			</div>
 			<div>
-				<h3> Travel to the Galar Region (based on Great Britain) </h3>
+				<h3> Galar Region Map <br> (based on Great Britain) </h3>
 				<img width = "600px" src="../pictures/galar_region.jpg" alt="Galar Region">
 				<h3> Galar Region starters  </h3>
 				<img width = "600px" src="../pictures/galar_starters.png" alt="Galar Starters">
