Added more emphasis to the legendaries from Pokemon SWSH

--- a/sub-sites/pokemon.html
+++ b/sub-sites/pokemon.html
@@ -28,7 +28,8 @@
 			<h3> Pok&eacute;mon Sword and Shield - November 15th 2019 </h3>
 			
 			<div>
-				<img width = "60%" src="../pictures/sword_shield_covers.png" alt="swsh covers">
+				<img width = "80%" src="../pictures/sword_shield_covers.png" alt="swsh covers">
+				<img width = "80%" src="../pictures/swsh_legends_charging.png" alt="legends charging">
 			</div>
 			
 			<h3> New Pok&eacute;mon! </h3>
