--- a/sub-sites/pokemon.html
+++ b/sub-sites/pokemon.html
@@ -88,7 +88,7 @@
 					<td> <img class="poke-game-cover" src="https://upload.wikimedia.org/wikipedia/en/thumb/3/3d/PokemonDiamondBox.jpg/220px-PokemonDiamondBox.jpg"> 
 						<img class="poke-game-cover" src="https://cf2.s3.souqcdn.com/item/2014/06/28/70/58/83/5/item_XL_7058835_5002134.jpg"> </td>
 						<td>Great starting Pok&eacute;mon<br><br>Very nostalgic music<br><br>The underground</td>
-						<td>HMs required too often<br></td>
+						<td>HMs required too often<br><br>Large portion of new Pok&eacute;mon were evolutions</td>
 				</tr>
 				<tr>
 					<th> Generation 5</th>
