Updated Rocket League page

--- a/sub-sites/rocket-league.html
+++ b/sub-sites/rocket-league.html
@@ -19,25 +19,53 @@
 			<div>
 				<div class="xbox-headline"> XBOX </div><div class="xbox-gamertag"> SoCcErNeMeSiS 8 </div>
 			</div>
+			<a href="https://www.youtube.com/watch?v=0cM6GiIibGo&t=241s">
+			<div>
+				 <div class="youtube-headline"> <img class="youtube-icon" src="../pictures/youtube_logo.png" alt="Youtube Logo"> </div><div class="youtube-name"> Highlight Video #1 </div>
+			</div>
+			</a>
+			<div>
+				<div class="youtube-headline"> <img class="youtube-icon" src="../pictures/youtube_logo.png" alt="Youtube Logo"> </div><div class="youtube-name"> Highlight Video #2 </div>
+			</div>
+			<div>
+				<img class="play-style-icon" src="../pictures/rocket_league/brandon-play-style.png" alt="Brandon Play Style">
+			</div>
 		</div>
 		<div class="right-side-rl">
-			<div class="rank-headline"> Competitive Modes </div>
-			<div class="rank-type"> Standard 3v3 </div>
-			
-			<div class="rank-type"> Duos 2v2 </div>
-			
-			<div class="rank-type"> Duel 1v1 </div>
-			
-			<div class="rank-type"> Solo 3v3 </div>
-			
-			<div class="rank-headline"> Other Modes </div>
-			<div class="rank-type"> Rumble </div>
-			
-			<div class="rank-type"> Dropshot </div>
-			
-			<div class="rank-type"> Hoops </div>
-			
-			<div class="rank-type"> Snow Day </div>
+
+			<div class="row">
+				<div class="rank-headline"> Competitive Modes </div>
+			</div>
+
+			<div class="row">
+				<div class="rank-type"> Standard 3v3 </div><div class="rank-value"> Champion II <img class="rank-icon" src="../pictures/rocket_league/rl_champion2_icon.png" alt="Champion II"> </div>
+			</div>
+			<div class="row">
+				<div class="rank-type"> Duos 2v2 </div><div class="rank-value"> Diamond III <img class="rank-icon" src="../pictures/rocket_league/rl_diamond3_icon.png" alt="Diamond III"> </div>
+			</div>
+			<div class="row">
+				<div class="rank-type"> Duel 1v1 </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">
+				<div class="rank-type"> Solo 3v3 </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+
+			<div class="row">			
+				<div class="rank-headline"> Other Modes </div>
+			</div>
+
+			<div class="row">
+				<div class="rank-type"> Rumble </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>	
+			<div class="row">		
+				<div class="rank-type"> Dropshot </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">		
+				<div class="rank-type"> Hoops </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">		
+				<div class="rank-type"> Snow Day </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
 		</div>
 	</div>
 	
@@ -46,27 +74,45 @@
 			<div class="player-headline"> Logan </div>
 			
 			<div class="xbox-headline"> XBOX </div><div class="xbox-gamertag"> RinoSlayer </div>
+			<div>
+				<img class="play-style-icon" src="../pictures/rocket_league/logan-play-style.png" alt="Logan Play Style">
+			</div>
 		</div>
 		<div class="right-side-rl">
-			<div class="rank-headline"> Competitive Modes </div>
-			
-			<div class="rank-type"> Standard 3v3 </div>
-			
-			<div class="rank-type"> Duos 2v2 </div>
-			
-			<div class="rank-type"> Duel 1v1 </div>
-			
-			<div class="rank-type"> Solo 3v3 </div>
-			
-			<div class="rank-headline"> Other Modes </div>
-			
-			<div class="rank-type"> Rumble </div>
-			
-			<div class="rank-type"> Dropshot </div>
-			
-			<div class="rank-type"> Hoops </div>
-			
-			<div class="rank-type"> Snow Day </div>
+
+			<div class="row">
+				<div class="rank-headline"> Competitive Modes </div>
+			</div>
+
+			<div class="row">
+				<div class="rank-type"> Standard 3v3 </div><div class="rank-value"> Champion II <img class="rank-icon" src="../pictures/rocket_league/rl_champion1_icon.png" alt="Champion II"> </div>
+			</div>
+			<div class="row">
+				<div class="rank-type"> Duos 2v2 </div><div class="rank-value"> Diamond III <img class="rank-icon" src="../pictures/rocket_league/rl_diamond2_icon.png" alt="Diamond II"> </div>
+			</div>
+			<div class="row">
+				<div class="rank-type"> Duel 1v1 </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">
+				<div class="rank-type"> Solo 3v3 </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+
+			<div class="row">			
+				<div class="rank-headline"> Other Modes </div>
+			</div>
+
+			<div class="row">
+				<div class="rank-type"> Rumble </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>	
+			<div class="row">		
+				<div class="rank-type"> Dropshot </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">		
+				<div class="rank-type"> Hoops </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">		
+				<div class="rank-type"> Snow Day </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
 		</div>
 	</div>
 	
@@ -75,27 +121,46 @@
 			<div class="player-headline"> Jeremiyah </div>
 			
 			<div class="xbox-headline"> XBOX </div><div class="xbox-gamertag"> Jesus was OK </div>
+
+			<div>
+				<img class="play-style-icon" src="../pictures/rocket_league/jeremiyah-play-style.png" alt="Jeremiyah Play Style">
+			</div>
 		</div>
 		<div class="right-side-rl">
-			<div class="rank-headline"> Competitive Modes </div>
-			
-			<div class="rank-type"> Standard 3v3 </div>
-			
-			<div class="rank-type"> Duos 2v2 </div>
-			
-			<div class="rank-type"> Duel 1v1 </div>
-			
-			<div class="rank-type"> Solo 3v3 </div>
-			
-			<div class="rank-headline"> Other Modes </div>
-			
-			<div class="rank-type"> Rumble </div>
-			
-			<div class="rank-type"> Dropshot </div>
-			
-			<div class="rank-type"> Hoops </div>
-			
-			<div class="rank-type"> Snow Day </div>
+
+			<div class="row">
+				<div class="rank-headline"> Competitive Modes </div>
+			</div>
+
+			<div class="row">
+				<div class="rank-type"> Standard 3v3 </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">
+				<div class="rank-type"> Duos 2v2 </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">
+				<div class="rank-type"> Duel 1v1 </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">
+				<div class="rank-type"> Solo 3v3 </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+
+			<div class="row">			
+				<div class="rank-headline"> Other Modes </div>
+			</div>
+
+			<div class="row">
+				<div class="rank-type"> Rumble </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>	
+			<div class="row">		
+				<div class="rank-type"> Dropshot </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">		
+				<div class="rank-type"> Hoops </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">		
+				<div class="rank-type"> Snow Day </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
 		</div>
 	</div>
 	
@@ -104,27 +169,46 @@
 			<div class="player-headline"> Joshuah </div>
 			
 			<div class="xbox-headline"> XBOX </div><div class="xbox-gamertag"> WhiteWadeWilson </div>
+
+			<div>
+				<img class="play-style-icon" src="../pictures/rocket_league/joshuah-play-style.png" alt="Joshuah Play Style">
+			</div>
 		</div>
 		<div class="right-side-rl">
-			<div class="rank-headline"> Competitive Modes </div>
-			
-			<div class="rank-type"> Standard 3v3 </div>
-			
-			<div class="rank-type"> Duos 2v2 </div>
-			
-			<div class="rank-type"> Duel 1v1 </div>
-			
-			<div class="rank-type"> Solo 3v3 </div>
-			
-			<div class="rank-headline"> Other Modes </div>
-			
-			<div class="rank-type"> Rumble </div>
-			
-			<div class="rank-type"> Dropshot </div>
-			
-			<div class="rank-type"> Hoops </div>
-			
-			<div class="rank-type"> Snow Day </div>
+
+			<div class="row">
+				<div class="rank-headline"> Competitive Modes </div>
+			</div>
+
+			<div class="row">
+				<div class="rank-type"> Standard 3v3 </div><div class="rank-value"> Diamond III <img class="rank-icon" src="../pictures/rocket_league/rl_diamond2_icon.png" alt="Diamond II"> </div>
+			</div>
+			<div class="row">
+				<div class="rank-type"> Duos 2v2 </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">
+				<div class="rank-type"> Duel 1v1 </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">
+				<div class="rank-type"> Solo 3v3 </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+
+			<div class="row">			
+				<div class="rank-headline"> Other Modes </div>
+			</div>
+
+			<div class="row">
+				<div class="rank-type"> Rumble </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>	
+			<div class="row">		
+				<div class="rank-type"> Dropshot </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">		
+				<div class="rank-type"> Hoops </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">		
+				<div class="rank-type"> Snow Day </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
 		</div>
 	</div>
 	
@@ -135,25 +219,40 @@
 			<div class="xbox-headline"> XBOX </div><div class="xbox-gamertag"> TemporaryGh0st </div>
 		</div>
 		<div class="right-side-rl">
-			<div class="rank-headline"> Competitive Modes </div>
-			
-			<div class="rank-type"> Standard 3v3 </div>
-			
-			<div class="rank-type"> Duos 2v2 </div>
-			
-			<div class="rank-type"> Duel 1v1 </div>
-			
-			<div class="rank-type"> Solo 3v3 </div>
-			
-			<div class="rank-headline"> Other Modes </div>
-			
-			<div class="rank-type"> Rumble </div>
-			
-			<div class="rank-type"> Dropshot </div>
-			
-			<div class="rank-type"> Hoops </div>
-			
-			<div class="rank-type"> Snow Day </div>
+
+			<div class="row">
+				<div class="rank-headline"> Competitive Modes </div>
+			</div>
+
+			<div class="row">
+				<div class="rank-type"> Standard 3v3 </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">
+				<div class="rank-type"> Duos 2v2 </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">
+				<div class="rank-type"> Duel 1v1 </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">
+				<div class="rank-type"> Solo 3v3 </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+
+			<div class="row">			
+				<div class="rank-headline"> Other Modes </div>
+			</div>
+
+			<div class="row">
+				<div class="rank-type"> Rumble </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>	
+			<div class="row">		
+				<div class="rank-type"> Dropshot </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">		
+				<div class="rank-type"> Hoops </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">		
+				<div class="rank-type"> Snow Day </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
 		</div>
 	</div>
 	
@@ -164,25 +263,40 @@
 			<div class="xbox-headline"> XBOX </div><div class="xbox-gamertag"> SMAKemYAKem </div>
 		</div>
 		<div class="right-side-rl">
-			<div class="rank-headline"> Competitive Modes </div>
-			
-			<div class="rank-type"> Standard 3v3 </div>
-			
-			<div class="rank-type"> Duos 2v2 </div>
-			
-			<div class="rank-type"> Duel 1v1 </div>
-			
-			<div class="rank-type"> Solo 3v3 </div>
-			
-			<div class="rank-headline"> Other Modes </div>
-			
-			<div class="rank-type"> Rumble </div>
-			
-			<div class="rank-type"> Dropshot </div>
-			
-			<div class="rank-type"> Hoops </div>
-			
-			<div class="rank-type"> Snow Day </div>
+
+			<div class="row">
+				<div class="rank-headline"> Competitive Modes </div>
+			</div>
+
+			<div class="row">
+				<div class="rank-type"> Standard 3v3 </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">
+				<div class="rank-type"> Duos 2v2 </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">
+				<div class="rank-type"> Duel 1v1 </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">
+				<div class="rank-type"> Solo 3v3 </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+
+			<div class="row">			
+				<div class="rank-headline"> Other Modes </div>
+			</div>
+
+			<div class="row">
+				<div class="rank-type"> Rumble </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>	
+			<div class="row">		
+				<div class="rank-type"> Dropshot </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">		
+				<div class="rank-type"> Hoops </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">		
+				<div class="rank-type"> Snow Day </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
 		</div>
 	</div>
 	
@@ -193,25 +307,40 @@
 			<div class="pc-headline"> PC </div><div class="pc-gamertag"> NauticalPhasmid </div>
 		</div>
 		<div class="right-side-rl">
-			<div class="rank-headline"> Competitive Modes </div>
-			
-			<div class="rank-type"> Standard 3v3 </div>
-			
-			<div class="rank-type"> Duos 2v2 </div>
-			
-			<div class="rank-type"> Duel 1v1 </div>
-			
-			<div class="rank-type"> Solo 3v3 </div>
-			
-			<div class="rank-headline"> Other Modes </div>
-			
-			<div class="rank-type"> Rumble </div>
-			
-			<div class="rank-type"> Dropshot </div>
-			
-			<div class="rank-type"> Hoops </div>
-			
-			<div class="rank-type"> Snow Day </div>
+
+			<div class="row">
+				<div class="rank-headline"> Competitive Modes </div>
+			</div>
+
+			<div class="row">
+				<div class="rank-type"> Standard 3v3 </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">
+				<div class="rank-type"> Duos 2v2 </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">
+				<div class="rank-type"> Duel 1v1 </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">
+				<div class="rank-type"> Solo 3v3 </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+
+			<div class="row">			
+				<div class="rank-headline"> Other Modes </div>
+			</div>
+
+			<div class="row">
+				<div class="rank-type"> Rumble </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>	
+			<div class="row">		
+				<div class="rank-type"> Dropshot </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">		
+				<div class="rank-type"> Hoops </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
+			<div class="row">		
+				<div class="rank-type"> Snow Day </div><div class="rank-value"> Unranked <img class="rank-icon" src="../pictures/rocket_league/rl_unranked_icon.png" alt="Unranked"> </div>
+			</div>
 		</div>
 	</div>
 </body>
