Added Pokemon SWSH Checklist

--- a/sub-sites/pokemon.html
+++ b/sub-sites/pokemon.html
@@ -147,8 +147,59 @@
 			<br>
 			<a href="https://play.pokemonshowdown.com/" class="white-menu light-gray-text"> Battle Online </a>
 			<br>
+
+			<h2> Pok&eacute;mon Sword and Shield Favorites Checklist </h2>
+
+			<h3> Non-legendaries </h3>
+
+			<div>
+				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/galvantula.png">
+				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/noivern.png">
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/klinklang.png">
+				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/sylveon.png">
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/medicham.png">
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/medicham-mega.png">
+			</div>
+			<div>
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/aegislash.png">
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/infernape.png">
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/rotom.png">
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/eelektross.png">
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/banette.png">
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/banette-mega.png">
+			</div>
+			<div>
+				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/staraptor.png">
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/greninja.png">
+				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/vanilluxe.png">
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/incineroar.png">
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/camerupt.png">
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/camerupt-mega.png">
+			</div>
+			<div>
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/bronzong.png">
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/zoroark.png">
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/talonflame.png">
+				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/wishiwashi.png">
+				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/charizard.png">
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/charizard-mega-x.png">
+			</div>
+
+			<h3> Legendaries </h3>
+
+			<div>
+				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/mew.png">
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/ho-oh.png">
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/groudon-primal.png">
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/dialga.png">
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/zekrom.png">
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/yveltal.png">
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/necrozma-sun.png">
+			</div>
+
+
 			
-			<h2 class="white-text"> Current Team - Pok&eacute;mon Let's Go Eevee! </h2>
+			<h2 class="white-text"> Most Recent Team - Pok&eacute;mon Let's Go Eevee! </h2>
 			<div>
 				<img src="https://play.pokemonshowdown.com/sprites/xyani/raichu.gif">
 				<br>
