Swapped Staraptor for Meowstic

--- a/sub-sites/pokemon.html
+++ b/sub-sites/pokemon.html
@@ -169,7 +169,7 @@
 				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/banette-mega.png">
 			</div>
 			<div>
-				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/staraptor.png">
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/meowstic.png">
 				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/greninja.png">
 				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/vanilluxe.png">
 				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/incineroar.png">
