Revealed Bronzong and swapped Necrozma for Solgaleo

--- a/sub-sites/pokemon.html
+++ b/sub-sites/pokemon.html
@@ -177,7 +177,7 @@
 				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/camerupt-mega.png">
 			</div>
 			<div>
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/bronzong.png">
+				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/bronzong.png">
 				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/zoroark.png">
 				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/talonflame.png">
 				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/wishiwashi.png">
@@ -194,7 +194,7 @@
 				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/dialga.png">
 				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/zekrom.png">
 				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/yveltal.png">
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/necrozma-sun.png">
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/solgaleo.png">
 			</div>
 
 
