--- a/sub-sites/pokemon.html
+++ b/sub-sites/pokemon.html
@@ -34,15 +34,15 @@
 			
 			<h3> New Pok&eacute;mon! </h3>
 			<div>
-				<a href="https:pokemondb.net/pokedex/zacian"> <img width = "45%" src="../pictures/zacian.png" alt="zacian"> </a>
-				<a href="https:pokemondb.net/pokedex/zamazenta"> <img width = "45%" src="../pictures/zamazenta.png" alt="zamazenta"> </a>
+				<a href="https://pokemondb.net/pokedex/zacian"> <img width = "45%" src="../pictures/zacian.png" alt="zacian"> </a>
+				<a href="https://pokemondb.net/pokedex/zamazenta"> <img width = "45%" src="../pictures/zamazenta.png" alt="zamazenta"> </a>
 			</div>
 			<div>
-				<a href="https:pokemondb.net/pokedex/wooloo"> <img width = "45%" src="../pictures/wooloo.png" alt="wooloo"> </a>
-				<a href="https:pokemondb.net/pokedex/drednaw"> <img width = "45%" src="../pictures/drednaw.png" alt="drednaw"> </a>
-				<a href="https:pokemondb.net/pokedex/gossifleur"> <img width = "45%" src="../pictures/gossifleur.png" alt="gossifleur"> </a>
-				<a href="https:pokemondb.net/pokedex/eldegoss"> <img width = "45%" src="../pictures/eldegoss.png" alt="eldegoss"> </a>
-				<a href="https:pokemondb.net/pokedex/corviknight"> <img width = "45%" src="../pictures/corviknight.png" alt="corviknight">	</a>	
+				<a href="https://pokemondb.net/pokedex/wooloo"> <img width = "45%" src="../pictures/wooloo.png" alt="wooloo"> </a>
+				<a href="https://pokemondb.net/pokedex/drednaw"> <img width = "45%" src="../pictures/drednaw.png" alt="drednaw"> </a>
+				<a href="https://pokemondb.net/pokedex/gossifleur"> <img width = "45%" src="../pictures/gossifleur.png" alt="gossifleur"> </a>
+				<a href="https://pokemondb.net/pokedex/eldegoss"> <img width = "45%" src="../pictures/eldegoss.png" alt="eldegoss"> </a>
+				<a href="https://pokemondb.net/pokedex/corviknight"> <img width = "45%" src="../pictures/corviknight.png" alt="corviknight">	</a>	
 			</div>
 			<div>
 				<h3> Galar Region Map <br> (based on Great Britain) </h3>
