Began updating Computer Science page

--- a/sub-sites/computer-science.html
+++ b/sub-sites/computer-science.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Brandon's CS Page</title>
 	<link rel="stylesheet" href="../styles.css">
+	<link rel="stylesheet" href="styles-cs.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
 </head>
 <body>
@@ -11,6 +12,10 @@
 	</div>	
 	
 	<div class="centering">
+	<div class="resume-section"> Education </div>
+		<div class="truman-button"> Truman State University <hr class="lockton-line"> Computer Science Major <hr class="lockton-line"> Mathematics Minor</div>
+		<div class="resume-section"> Employment History </div>
+		<div class="lockton-button"> Lockton Insurance Broker <hr class="lockton-line"> Intern in the IT department <hr class="lockton-line"> Summer 2019 </div>
 		<br>
 		<p> View my Github account </p>
 		<a href="https://github.com/brandonruoff8" class="gray-button">  GitHub </a>
@@ -29,7 +34,7 @@
 			I am currently trying to move a Pok&eacute;mon battle simulator that I wrote in Java into Javascript so that
 			it can be played on my website.
 			<br>
-			 <span class="red-text"> This is a work in progress. </span>
+			<span class="red-text"> This is a work in progress. </span>
 		</p>
 		<a href="pokemon-battle.html" class="gray-button"> Pok&eacute;mon Battle Simulator </a>
 	</div>
