--- a/sub-sites/pokemon.html
+++ b/sub-sites/pokemon.html
@@ -25,6 +25,15 @@
 				<a href="https://www.smogon.com/" class="gray-button"> https://www.smogon.com/ </a>
 				
 			<h2> Recent News </h2>
+			
+			<h3> New Pok&eacute;mon! </h3>
+			<div>
+				<a href="https://pokemondb.net/pokedex/yamper"> <img width = "45%" src="../pictures/yamper.png" alt="yamper"> </a>
+				<a href="https://pokemondb.net/pokedex/alcremie"> <img width = "45%" src="../pictures/alcremie.png" alt="alcremie"> </a>
+				<a href="https://pokemondb.net/pokedex/rolycoly"> <img width = "45%" src="../pictures/rolycoly.png" alt="rolycoly"> </a>
+				<a href="https://pokemondb.net/pokedex/duraludon"> <img width = "45%" src="../pictures/duraludon.png" alt="duraludon"> </a>	
+			</div>
+			
 			<h3> Pok&eacute;mon Sword and Shield - November 15th 2019 </h3>
 			
 			<div>
@@ -32,17 +41,18 @@
 				<img width = "80%" src="../pictures/swsh_legends_charging.png" alt="legends charging">
 			</div>
 			
-			<h3> New Pok&eacute;mon! </h3>
+			<h3> Previously Announced New Pok&eacute;mon </h3>
+			
 			<div>
 				<a href="https://pokemondb.net/pokedex/zacian"> <img width = "45%" src="../pictures/zacian.png" alt="zacian"> </a>
 				<a href="https://pokemondb.net/pokedex/zamazenta"> <img width = "45%" src="../pictures/zamazenta.png" alt="zamazenta"> </a>
 			</div>
-			<div>
+			<div>					
 				<a href="https://pokemondb.net/pokedex/wooloo"> <img width = "45%" src="../pictures/wooloo.png" alt="wooloo"> </a>
 				<a href="https://pokemondb.net/pokedex/drednaw"> <img width = "45%" src="../pictures/drednaw.png" alt="drednaw"> </a>
 				<a href="https://pokemondb.net/pokedex/gossifleur"> <img width = "45%" src="../pictures/gossifleur.png" alt="gossifleur"> </a>
 				<a href="https://pokemondb.net/pokedex/eldegoss"> <img width = "45%" src="../pictures/eldegoss.png" alt="eldegoss"> </a>
-				<a href="https://pokemondb.net/pokedex/corviknight"> <img width = "45%" src="../pictures/corviknight.png" alt="corviknight">	</a>	
+				<a href="https://pokemondb.net/pokedex/corviknight"> <img width = "45%" src="../pictures/corviknight.png" alt="corviknight"> </a>	
 			</div>
 			<div>
 				<h3> Galar Region Map <br> (based on Great Britain) </h3>
