Made one more adjustment to formatting, specifically with the Skill section

--- a/sub-sites/overwatch.html
+++ b/sub-sites/overwatch.html
@@ -38,7 +38,7 @@
 					<div class="skill-headline"> Skill </div>
 				</div>
 				<div class="skill-headline-container">
-					<div class="sr-headline-xbox"> ---- SR </div>
+					<div class="sr-headline"> ---- SR </div>
 				</div>
 			</div>
 			<div class="gray-outline white-text third-width">
@@ -85,7 +85,7 @@
 					<div class="skill-headline"> Skill </div>
 				</div>
 				<div class="skill-headline-container">
-					<div class="sr-headline-xbox"> ---- SR </div>
+					<div class="sr-headline"> ---- SR </div>
 				</div>
 			</div>
 			<div class="gray-outline white-text third-width">
@@ -127,7 +127,7 @@
 					<div class="skill-headline"> Skill </div>
 				</div>
 				<div class="skill-headline-container">
-					<div class="sr-headline-xbox"> ---- SR </div>
+					<div class="sr-headline"> ---- SR </div>
 				</div>
 			</div>
 			<div class="gray-outline white-text third-width">
@@ -170,7 +170,7 @@
 					<div class="skill-headline"> Skill </div>
 				</div>
 				<div class="skill-headline-container">
-					<div class="sr-headline-xbox"> ---- SR </div>
+					<div class="sr-headline"> ---- SR </div>
 				</div>
 			</div>
 			<div class="gray-outline white-text third-width">
@@ -213,7 +213,7 @@
 					<div class="skill-headline"> Skill </div>
 				</div>
 				<div class="skill-headline-container">
-					<div class="sr-headline-xbox"> ---- SR </div>
+					<div class="sr-headline"> ---- SR </div>
 				</div>
 			</div>
 			<div class="gray-outline white-text third-width">
